added paragraph in feat c

--- a/feat-c.html
+++ b/feat-c.html
@@ -7,5 +7,14 @@
   </head>
   <body>
     <h1>Feature c</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit at neque
+      aperiam est? Blanditiis nisi fugit nesciunt culpa ducimus distinctio esse
+      praesentium, beatae libero iste eaque architecto quidem amet
+      exercitationem. Voluptatem ullam natus provident vero odio nostrum, a
+      maiores nobis perferendis, ipsum ipsa ut dolores mollitia fuga aliquam
+      repudiandae, veritatis tenetur sunt omnis neque nemo ab! Corporis in
+      necessitatibus ipsum!
+    </p>
   </body>
 </html>
