--- a/feat-c.html
+++ b/feat-c.html
@@ -16,5 +16,6 @@
       repudiandae, veritatis tenetur sunt omnis neque nemo ab! Corporis in
       necessitatibus ipsum!
     </p>
+    <a>Click Me</a>
   </body>
 </html>
